refactor get main weather, add new UseCase, add get data from cache with flow

--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -7,12 +7,12 @@
     tools:context=".presentation.MainFragment">
 
     <TextView
+        android:id="@+id/cityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="MAIN" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
         android:id="@+id/details"
