--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -32,5 +32,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="FORECAST"/>
 
+    <include layout="@layout/part_result"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
