--- a/features/forecast/src/main/res/layout/fragment_forecast.xml
+++ b/features/forecast/src/main/res/layout/fragment_forecast.xml
@@ -22,4 +22,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="BACK"/>
 
+    <include layout="@layout/part_result"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
