--- a/features/forecast/src/main/res/layout/fragment_forecast.xml
+++ b/features/forecast/src/main/res/layout/fragment_forecast.xml
@@ -6,15 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.ForecastFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvForecast"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="FORECAST" />
+        app:layout_constraintBottom_toTopOf="@id/btnBack"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_margin="4dp"/>
 
     <Button
-        android:id="@+id/backBtn"
+        android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
