create icon mapper and add weather icon drawable

--- a/features/forecast/src/main/res/layout/forecast_item.xml
+++ b/features/forecast/src/main/res/layout/forecast_item.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="150dp"
+    android:layout_margin="12dp"
+    android:padding="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/forecast_item_background">
 
     <TextView
         android:id="@+id/tvTemp"
@@ -11,6 +14,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@android:color/white"
         android:textSize="20dp"
         tools:text = "20 C"/>
 
@@ -20,6 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTemp"
+        android:textColor="@android:color/white"
         android:textSize="12dp"
         tools:text = "23.10.2035"/>
 
@@ -27,8 +32,10 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDate"
+        app:layout_constraintStart_toStartOf="@id/ivWeatherIcon"
+        app:layout_constraintEnd_toEndOf="@id/ivWeatherIcon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@android:color/white"
         android:textSize="16dp"
         tools:text = "coldy"/>
 
@@ -37,7 +44,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
