--- a/features/forecast/src/main/res/layout/fragment_forecast.xml
+++ b/features/forecast/src/main/res/layout/fragment_forecast.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.ForecastFragment">
+    tools:context=".presentation.ForecastFragment"
+    android:background="@color/fragment_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvForecast"
