--- a/core/src/main/res/layout/part_result.xml
+++ b/core/src/main/res/layout/part_result.xml
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="16sp"
+            android:textColor="@android:color/white"
             tools:text="Error! Please try again later"/>
 
         <Button
