--- a/features/main/src/main/res/layout-land/fragment_main.xml
+++ b/features/main/src/main/res/layout-land/fragment_main.xml
@@ -22,7 +22,7 @@
         android:id="@+id/tvTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:textColor="@android:color/white"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,10 +37,8 @@
         android:textColor="@android:color/white"
         android:textSize="14sp"
         android:layout_marginRight="4dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTemp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/tvTemp"
         app:layout_constraintEnd_toStartOf="@id/tvUpdateTime"
-        app:layout_constraintHorizontal_chainStyle="packed"
         android:text="Last update:"/>
 
     <TextView
@@ -49,8 +47,7 @@
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/tvTemp"
-        app:layout_constraintStart_toEndOf="@id/tvUpdateHead"
+        app:layout_constraintBottom_toBottomOf="@id/tvTemp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="13.13.2013"/>
 
@@ -101,10 +98,10 @@
         android:layout_margin="8dp"
         android:backgroundTint="@color/card_background"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@id/card2"
-        app:layout_constraintEnd_toStartOf="@id/middleVerticalGuideline"
+        app:layout_constraintEnd_toStartOf="@id/card3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime">
+        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
+        app:layout_constraintBottom_toTopOf="@id/btnDetails">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -143,10 +140,10 @@
         android:layout_margin="8dp"
         android:backgroundTint="@color/card_background"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@id/btnDetails"
-        app:layout_constraintEnd_toStartOf="@id/middleVerticalGuideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card1">
+        app:layout_constraintEnd_toStartOf="@id/card4"
+        app:layout_constraintStart_toEndOf="@id/card3"
+        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
+        app:layout_constraintBottom_toTopOf="@id/btnDetails">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -198,10 +195,10 @@
         android:layout_margin="8dp"
         android:backgroundTint="@color/card_background"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@id/card4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/middleVerticalGuideline"
-        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime">
+        app:layout_constraintEnd_toStartOf="@id/card2"
+        app:layout_constraintStart_toEndOf="@id/card1"
+        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
+        app:layout_constraintBottom_toTopOf="@id/btnDetails">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -240,10 +237,10 @@
         android:layout_margin="8dp"
         android:backgroundTint="@color/card_background"
         app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@id/btnDetails"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/middleVerticalGuideline"
-        app:layout_constraintTop_toBottomOf="@id/card3">
+        app:layout_constraintStart_toEndOf="@id/card2"
+        app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
+        app:layout_constraintBottom_toTopOf="@id/btnDetails">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
