--- a/features/forecast/src/main/res/layout/fragment_forecast.xml
+++ b/features/forecast/src/main/res/layout/fragment_forecast.xml
@@ -42,10 +42,10 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp"
+        android:text="BACK"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="BACK"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <include layout="@layout/part_result"/>
 
