create splash screen and fix time mapper bag

--- a/features/splash/src/main/res/layout-land/fragment_splash_screen.xml
+++ b/features/splash/src/main/res/layout-land/fragment_splash_screen.xml
@@ -8,12 +8,13 @@
     tools:context=".presentation.SplashScreenFragment">
 
     <TextView
+        android:id="@+id/tvAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ivSplashScreen"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ivSplashScreen"
         android:text="WEATHER APP"
         android:textColor="@android:color/white"
         android:textSize="30sp"/>
@@ -22,7 +23,7 @@
         android:id="@+id/ivSplashScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tvAppName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -32,10 +33,10 @@
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/ivSplashScreen"
+        app:layout_constraintBottom_toBottomOf="@id/ivSplashScreen"
+        app:layout_constraintStart_toStartOf="@id/ivSplashScreen"
+        app:layout_constraintEnd_toEndOf="@id/ivSplashScreen"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
