create storage prefs manager

--- a/features/forecast/src/main/res/navigation/nav_graph_forecast.xml
+++ b/features/forecast/src/main/res/navigation/nav_graph_forecast.xml
@@ -11,11 +11,7 @@
         android:label="fragment_forecast"
         tools:layout="@layout/fragment_forecast">
 
-        <deepLink app:uri="weatherTestApp://forecast/{cityName}" />
-
-        <argument
-            android:name="cityName"
-            app:argType="string" />
+        <deepLink app:uri="weatherTestApp://forecast" />
 
     </fragment>
 </navigation>
