--- a/features/forecast/src/main/res/layout-land/fragment_forecast.xml
+++ b/features/forecast/src/main/res/layout-land/fragment_forecast.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/medium_text_size"
         app:layout_constraintBottom_toBottomOf="@id/btnRefresh"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/btnRefresh"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/refresh_icon"
@@ -33,7 +33,7 @@
         android:id="@+id/rvForecast"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/small_margin"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/btnBack"
         app:layout_constraintTop_toBottomOf="@id/btnRefresh"
@@ -44,7 +44,8 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BACK"
+        android:text="@string/back_button"
+        android:layout_margin="@dimen/normal_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
