--- a/features/main/src/main/res/layout-land/fragment_main.xml
+++ b/features/main/src/main/res/layout-land/fragment_main.xml
@@ -8,11 +8,11 @@
     tools:context=".presentation.MainFragment">
 
     <TextView
-        android:id="@+id/cityName"
+        android:id="@+id/tvCityName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/medium_text_size"
         app:layout_constraintBottom_toBottomOf="@id/btnRefresh"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +22,9 @@
         android:id="@+id/tvTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:textColor="@android:color/white"
-        android:textSize="40sp"
+        android:textSize="@dimen/temp_head_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnRefresh"
@@ -35,18 +35,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:layout_marginRight="4dp"
+        android:textSize="@dimen/small_text_size"
+        android:layout_marginRight="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="@id/tvTemp"
         app:layout_constraintEnd_toStartOf="@id/tvUpdateTime"
-        android:text="Last update:"/>
+        android:text="@string/last_update_head"/>
 
     <TextView
         android:id="@+id/tvUpdateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/small_text_size"
         app:layout_constraintBottom_toBottomOf="@id/tvTemp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="13.13.2013"/>
@@ -55,7 +55,7 @@
         android:id="@+id/btnSearch"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/search_icon"
@@ -66,7 +66,7 @@
         android:id="@+id/btnRefresh"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         android:src="@drawable/refresh_icon"
@@ -77,8 +77,8 @@
         android:id="@+id/btnDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="DETAILS"
+        android:layout_margin="@dimen/normal_margin"
+        android:text="@string/details_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -86,8 +86,8 @@
         android:id="@+id/btnForecast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="FORECAST"
+        android:layout_margin="@dimen/normal_margin"
+        android:text="@string/forecast_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -95,9 +95,9 @@
         android:id="@+id/card1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:backgroundTint="@color/card_background"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:layout_constraintEnd_toStartOf="@id/card3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitCenter"
-                app:layout_constraintBottom_toTopOf="@id/tvDescription"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -122,12 +122,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="@dimen/normal_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ivIcon"
-                tools:text="coldy" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Rains" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -137,9 +136,9 @@
         android:id="@+id/card2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:backgroundTint="@color/card_background"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:layout_constraintEnd_toStartOf="@id/card4"
         app:layout_constraintStart_toEndOf="@id/card3"
         app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
@@ -153,18 +152,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="16sp"
+                android:textSize="@dimen/normal_text_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Wind"/>
+                android:text="@string/wind_head"/>
 
             <TextView
                 android:id="@+id/tvWindSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="@dimen/main_card_value_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/tvWindSpeedMetric"
                 app:layout_constraintStart_toStartOf="parent"
@@ -177,12 +176,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="@dimen/main_card_value_size"
                 app:layout_constraintTop_toBottomOf="@id/tvWindSpeed"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="m/s"/>
+                android:text="@string/wind_speed_metric"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -192,9 +191,9 @@
         android:id="@+id/card3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:backgroundTint="@color/card_background"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:layout_constraintEnd_toStartOf="@id/card2"
         app:layout_constraintStart_toEndOf="@id/card1"
         app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
@@ -208,18 +207,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="16sp"
+                android:textSize="@dimen/normal_text_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Humidity"/>
+                android:text="@string/humidity_head"/>
 
             <TextView
                 android:id="@+id/tvHumidity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="@dimen/main_card_value_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -234,9 +233,9 @@
         android:id="@+id/card4"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/normal_margin"
         android:backgroundTint="@color/card_background"
-        app:cardCornerRadius="20dp"
+        app:cardCornerRadius="@dimen/card_corner_radius"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/card2"
         app:layout_constraintTop_toBottomOf="@id/tvUpdateTime"
@@ -250,18 +249,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="16sp"
+                android:textSize="@dimen/normal_text_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="Pressure"/>
+                android:text="@string/pressure_head"/>
 
             <TextView
                 android:id="@+id/tvPressure"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="@dimen/main_card_value_size"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/tvPressureMetric"
                 app:layout_constraintStart_toStartOf="parent"
@@ -274,12 +273,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="@dimen/main_card_value_size"
                 app:layout_constraintTop_toBottomOf="@id/tvPressure"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="hPa"/>
+                android:text="@string/pressure_metric"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
