--- a/features/splash/src/main/res/layout/fragment_splash_screen.xml
+++ b/features/splash/src/main/res/layout/fragment_splash_screen.xml
@@ -14,9 +14,9 @@
         app:layout_constraintBottom_toTopOf="@id/ivSplashScreen"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="WEATHER APP"
+        android:text="@string/weather_app_name"
         android:textColor="@android:color/white"
-        android:textSize="30sp"/>
+        android:textSize="@dimen/weather_name_size"/>
 
     <ImageView
         android:id="@+id/ivSplashScreen"
